# HueBot

./: .coveragerc  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst  pkg_development.rst
env/: environment-dev.yaml  environment-rtd.yaml  requirements.txt
huebot/: __init__.py
tests/: test_huebot.py
